@@ -95,6 +95,20 @@ name|apache
 operator|.
 name|hadoop
 operator|.
+name|security
+operator|.
+name|UserGroupInformation
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
 name|mapred
 operator|.
 name|JobID
@@ -215,6 +229,16 @@ literal|null
 decl_stmt|;
 try|try
 block|{
+name|UserGroupInformation
+name|ugi
+init|=
+name|UgiFactory
+operator|.
+name|getUgi
+argument_list|(
+name|user
+argument_list|)
+decl_stmt|;
 name|tracker
 operator|=
 name|ShimLoader
@@ -225,6 +249,8 @@ operator|.
 name|getWebHCatShim
 argument_list|(
 name|appConf
+argument_list|,
+name|ugi
 argument_list|)
 expr_stmt|;
 name|JobID
