@@ -126,18 +126,13 @@ name|WebHCatJTShim20S
 parameter_list|(
 name|Configuration
 name|conf
+parameter_list|,
+name|UserGroupInformation
+name|ugi
 parameter_list|)
 throws|throws
 name|IOException
 block|{
-name|UserGroupInformation
-name|ugi
-init|=
-name|UserGroupInformation
-operator|.
-name|getLoginUser
-argument_list|()
-decl_stmt|;
 name|cnx
 operator|=
 operator|(
