@@ -33,6 +33,20 @@ name|apache
 operator|.
 name|hadoop
 operator|.
+name|security
+operator|.
+name|UserGroupInformation
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
 name|hive
 operator|.
 name|shims
@@ -70,6 +84,10 @@ name|WebHCatJTShim23
 parameter_list|(
 name|Configuration
 name|conf
+parameter_list|,
+specifier|final
+name|UserGroupInformation
+name|ugi
 parameter_list|)
 throws|throws
 name|IOException
